--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,14 +9,12 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <Button
-        android:id="@+id/btn_get"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/tv_gson"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="点击发送网络请求"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_margin="20dp"
+        android:lineSpacingExtra="5dp"
+        android:paddingTop="20dp"/>
 
 </android.support.constraint.ConstraintLayout>
